cmake_minimum_required(VERSION 3.21.1)

set(TARGET_NAME tilededitor)

find_package(Qt6 COMPONENTS Core Widgets Concurrent Qml Svg OpenGLWidgets REQUIRED)

SET(SOURCE_DIR ${TILED_BASE_DIR}/src/tiled/)
SET("${TARGET_NAME}_PATH" ${SOURCE_DIR} PARENT_SCOPE)
INCLUDE_DIRECTORIES(
  ${libtiled_PATH}
  ${qtsingleapplication_PATH}
  ${qtpropertybrowser_PATH}

  ${Qt6Core_INCLUDE_DIRS}
  ${Qt6Widgets_INCLUDE_DIRS}
  ${Qt6Concurrent_INCLUDE_DIRS}
  ${Qt6Qml_INCLUDE_DIRS}
  ${Qt6Qml_PRIVATE_INCLUDE_DIRS}
  ${Qt6Svg_INCLUDE_DIRS}
  ${Qt6OpenGLWidgets_INCLUDE_DIRS}
  ${SOURCE_DIR}
)
message(CHECK_START "Paths - libtiled_PATH - ${libtiled_PATH}")

add_compile_definitions(
    "TILED_EDITOR_LIBRARY"
    "TILED_VERSION=1.10.0"
    "QT_DISABLE_DEPRECATED_BEFORE=QT_VERSION_CHECK(5,15,0)"
    "QT_NO_DEPRECATED_WARNINGS"
    "QT_NO_CAST_FROM_ASCII"
    "QT_NO_CAST_TO_ASCII"
    "QT_NO_FOREACH"
    "QT_NO_URL_CAST_FROM_STRING"
    "_USE_MATH_DEFINES"
)

SET(SOURCE_FILES
        aboutdialog.cpp
        aboutdialog.ui
        abstractobjecttool.cpp
        abstracttilefilltool.cpp
        abstracttileselectiontool.cpp
        abstracttiletool.cpp
        abstracttool.cpp
        abstractworldtool.cpp
        actionmanager.cpp
        actionsearch.cpp
        addpropertydialog.cpp
        addpropertydialog.ui
        addremovelayer.cpp
        addremovemapobject.cpp
        addremovetiles.cpp
        addremovetileset.cpp
        addremovewangset.cpp
        adjusttileindexes.cpp
        automapper.cpp
        automapperwrapper.cpp
        automappingmanager.cpp
        automappingutils.cpp
        brokenlinks.cpp
        brushitem.cpp
        bucketfilltool.cpp
        capturestamphelper.cpp
        changeimagelayerproperty.cpp
        changelayer.cpp
        changemapobject.cpp
        changemapobjectsorder.cpp
        changemapproperty.cpp
        changeobjectgroupproperties.cpp
        changepolygon.cpp
        changeproperties.cpp
        changeselectedarea.cpp
        changetile.cpp
        changetileanimation.cpp
        changetileimagesource.cpp
        changetileobjectgroup.cpp
        changetilewangid.cpp
        changewangcolordata.cpp
        changewangsetdata.cpp
        clipboardmanager.cpp
        colorbutton.cpp
#       command.cpp 
        commandbutton.cpp
        commanddatamodel.cpp
        commanddialog.cpp
        commanddialog.ui
        commandmanager.cpp
        commandsedit.cpp
        commandsedit.ui
        consoledock.cpp
        createellipseobjecttool.cpp
        createobjecttool.cpp
        createpointobjecttool.cpp
        createpolygonobjecttool.cpp
        createrectangleobjecttool.cpp
        createscalableobjecttool.cpp
        createtemplatetool.cpp
        createtextobjecttool.cpp
        createtileobjecttool.cpp
        custompropertieshelper.cpp
        debugdrawitem.cpp
        document.cpp
        documentmanager.cpp
        donationpopup.cpp
        editableasset.cpp
        editablegrouplayer.cpp
        editableimagelayer.cpp
        editablelayer.cpp
        editablemanager.cpp
        editablemap.cpp
        editablemapobject.cpp
        editableobject.cpp
        editableobjectgroup.cpp
        editableselectedarea.cpp
        editabletile.cpp
        editabletilelayer.cpp
        editabletileset.cpp
        editablewangset.cpp
        editor.cpp
        editpolygontool.cpp
        eraser.cpp
        erasetiles.cpp
        exportasimagedialog.cpp
        exportasimagedialog.ui
        exporthelper.cpp
        filechangedwarning.cpp
        fileedit.cpp
        filteredit.cpp
        flexiblescrollbar.cpp
        flipmapobjects.cpp
        geometry.cpp
        grouplayeritem.cpp
        iconcheckdelegate.cpp
        id.cpp
        imagecolorpickerwidget.cpp
        imagecolorpickerwidget.ui
        imagelayeritem.cpp
        clickablelabel.cpp
        issuescounter.cpp
        issuesdock.cpp
        issuesmodel.cpp
        languagemanager.cpp
        layerdock.cpp
        layeritem.cpp
        layermodel.cpp
        layeroffsettool.cpp
        locatorwidget.cpp
        magicwandtool.cpp
        maintoolbar.cpp
        mainwindow.cpp
        mainwindow.ui
        mapdocumentactionhandler.cpp
        mapdocument.cpp
        mapeditor.cpp
        mapitem.cpp
        mapobjectitem.cpp
        mapobjectmodel.cpp
        mapscene.cpp
        mapview.cpp
        minimap.cpp
        minimapdock.cpp
        movelayer.cpp
        movemapobjecttogroup.cpp
        newmapdialog.cpp
        newmapdialog.ui
        newsbutton.cpp
        newsfeed.cpp
        newtilesetdialog.cpp
        newtilesetdialog.ui
        newversionbutton.cpp
        newversionchecker.cpp
        newversiondialog.cpp
        newversiondialog.ui
        noeditorwidget.cpp
        noeditorwidget.ui
        objectgroupitem.cpp
        objectrefdialog.cpp
        objectrefdialog.ui
        objectrefedit.cpp
        objectreferenceitem.cpp
        objectreferenceshelper.cpp
        objectreferencetool.cpp
        objectsdock.cpp
        objectselectionitem.cpp
        objectselectiontool.cpp
        objectsview.cpp
        offsetlayer.cpp
        offsetmapdialog.cpp
        offsetmapdialog.ui
        painttilelayer.cpp
        pluginlistmodel.cpp
        pointhandle.cpp
        popupwidget.cpp
        preferences.cpp
        preferencesdialog.cpp
        preferencesdialog.ui
        project.cpp
        projectdock.cpp
        projectmanager.cpp
        projectmodel.cpp
        projectpropertiesdialog.cpp
        projectpropertiesdialog.ui
        propertiesdock.cpp
        propertybrowser.cpp
        propertytypeseditor.cpp
        propertytypeseditor.ui
        propertytypesmodel.cpp
        raiselowerhelper.cpp
        regionvaluetype.cpp
        relocatetiles.cpp
        reparentlayers.cpp
        replacetemplate.cpp
        replacetileset.cpp
        resizedialog.cpp
        resizedialog.ui
        resizehelper.cpp
        resizemap.cpp
        resizetilelayer.cpp
        reversingproxymodel.cpp
        scriptbase64.cpp
        scriptdialog.cpp
        scriptedaction.cpp
        scriptedfileformat.cpp
        scriptedtool.cpp
        scriptfile.cpp
        scriptfileformatwrappers.cpp
        scriptfileinfo.cpp
        scriptimage.cpp
        scriptmanager.cpp
        scriptmodule.cpp
#        scriptprocess.cpp
        selectionrectangle.cpp
        selectsametiletool.cpp
        session.cpp
        shapefilltool.cpp
        shortcutsettingspage.cpp
        shortcutsettingspage.ui
        snaphelper.cpp
        stampactions.cpp
        stampbrush.cpp
        stylehelper.cpp
        swaptiles.cpp
        tabbar.cpp
        templatesdock.cpp
        texteditordialog.cpp
        texteditordialog.ui
        textpropertyedit.cpp
        tileanimationeditor.cpp
        tileanimationeditor.ui
        tilecollisiondock.cpp
        tiledapplication.cpp
        tiled.qrc
        tiledproxystyle.cpp
        tilelayeredit.cpp
        tilelayeritem.cpp
        tilepainter.cpp
        tileselectionitem.cpp
        tileselectiontool.cpp
        tilesetchanges.cpp
        tilesetdock.cpp
        tilesetdocument.cpp
        tilesetdocumentsmodel.cpp
        tileseteditor.cpp
        tilesetmodel.cpp
        tilesetparametersedit.cpp
        tilesetview.cpp
        tilesetwangsetmodel.cpp
        tilestamp.cpp
        tilestampmanager.cpp
        tilestampmodel.cpp
        tilestampsdock.cpp
        tmxmapformat.cpp
        toolmanager.cpp
        transformmapobjects.cpp
        treeviewcombobox.cpp
        undocommands.cpp
        undodock.cpp
        utils.cpp
        varianteditorfactory.cpp
        variantpropertymanager.cpp
        wangbrush.cpp
        wangcolormodel.cpp
        wangcolorview.cpp
        wangdock.cpp
        wangfiller.cpp
        wangoverlay.cpp
        wangsetmodel.cpp
        wangsetview.cpp
        wangtemplatemodel.cpp
        wangtemplateview.cpp
        worlddocument.cpp
        worldmovemaptool.cpp
        zoomable.cpp
)

string(REGEX REPLACE "([^;]+)" "${SOURCE_DIR}/\\1" SOURCE_FILES "${SOURCE_FILES}")
qt_add_library(${TARGET_NAME} STATIC
        ${SOURCE_FILES}
)

set_target_properties(${TARGET_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    AUTOMOC ON
    AUTOUIC ON
    AUTORCC ON
)
